# rs-slack-api-gen

./: Cargo.toml
src/: main.rs  template.rs
