[package]
name = "slack-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
once_cell = "1.19.0"
# openapiv2 = { git = "https://github.com/cloud303-cholden/rs-openapiv2", version = "0.1.0" }
openapiv2 = { path = "../rs-openapiv2", version = "0.1.0" }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
string_template = "0.2.1"
tinytemplate = "1.2.1"
tokio = { version = "1.35.0", features = ["full"] }
